had some typos and pluralization errors
